# pico_StealPan_MIDI_Controler

./: .gitignore  README.md
Docs/: some_interactive_work_testing.txt
src/: main.c  tusb_config.h
src/cport/: CMakeLists.txt  main.c
src/prototype/readpins/: code.py  deploy.sh
